fix: Change charts right alignment.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@ main {
       background-color: rgba(0, 0, 0, 0.3);
 
       figure {
-        padding: $spacing $spacing * 2 $spacing 0;
+        padding: $spacing $spacing * 1.5 $spacing 0;
       }
     }
 
@@ -22,7 +22,7 @@ main {
       height: 33%;
       display: flex;
       flex-direction: row;
-      padding: $spacing * 2 $spacing * 2 0 $spacing * 2;
+      padding: $spacing * 2 $spacing * 1.5 0 $spacing * 2;
       box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.5);
     }
 
